[gd_scene load_steps=11 format=2]

[ext_resource path="res://Juego/Estacion/dotWhite.png" type="Texture" id=1]
[ext_resource path="res://Juego/Estacion/spaceStation_021.png" type="Texture" id=2]
[ext_resource path="res://Juego/Estacion/EstacionRecarga.gd" type="Script" id=3]
[ext_resource path="res://Juego/Estacion/Audios/slime_000.oggstr" type="AudioStream" id=4]
[ext_resource path="res://Juego/Estacion/Audios/slime_001.oggstr" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 66.0
height = 166.0

[sub_resource type="CircleShape2D" id=2]
radius = 16.5529

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AreaCollision:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaRecarga:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaRecarga:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.407843 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "activado"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaCollision:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaRecarga:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaRecarga:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.407843 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AreaCollision:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaRecarga:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaRecarga:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="EstacionRecarga" type="Node2D"]
script = ExtResource( 3 )

[node name="AreaCollision" type="Area2D" parent="."]
rotation = 6.28319
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaCollision"]
z_index = 1
shape = SubResource( 1 )

[node name="SpriteEstacion" type="Sprite" parent="AreaCollision"]
z_index = 1
texture = ExtResource( 2 )

[node name="AreaRecarga" type="Area2D" parent="."]
modulate = Color( 1, 1, 1, 0.407843 )
scale = Vector2( 0.8, 0.8 )
collision_layer = 0
collision_mask = 31
space_override = 1

[node name="SpriteZonaRecarga" type="Sprite" parent="AreaRecarga"]
scale = Vector2( 45, 45 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaRecarga"]
scale = Vector2( 35, 35 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "activado"
anims/RESET = SubResource( 4 )
anims/activado = SubResource( 5 )
anims/default = SubResource( 3 )

[node name="CargaSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="VacioSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="AreaCollision" to="." method="_on_AreaCollision_body_entered"]
[connection signal="body_entered" from="AreaRecarga" to="." method="_on_AreaRecarga_body_entered"]
[connection signal="body_exited" from="AreaRecarga" to="." method="_on_AreaRecarga_body_exited"]
